--- a/小总结.md
+++ b/小总结.md
@@ -30,6 +30,34 @@ LICEcap+GIF Movice Gear
 
 	Rect bounds = new Rect();
 	paint.getTextBounds(text, 0, text.length(), bounds);
+	
+
+>TextView添加圆形背景span
+
+	public class CircleSpan implements LineBackgroundSpan {
+	
+	    public static final float DEFAULT_RADIUS = 3;
+	
+	
+	    private float radius;
+	    private int color;
+	
+	
+	    public CircleSpan(float radius, int color) {
+	        this.radius = radius;
+	        this.color = color;
+	    }
+	
+	    @Override
+	    public void drawBackground(Canvas c, Paint p, int left, int right, int top, int baseline, int bottom, CharSequence text, int start, int end, int lnum) {
+	        int oldColor = p.getColor();
+	        if (color != 0) {
+	            p.setColor(color);
+	        }
+	        c.drawCircle((left + right) / 2, (bottom + top) / 2, Math.min(bottom, right) / 2, p);
+	        p.setColor(oldColor);
+	    }
+	}
 
 >google地图文字marker
 
