--- a/小总结.md
+++ b/小总结.md
@@ -30,6 +30,20 @@ LICEcap+GIF Movice Gear
 
 	Rect bounds = new Rect();
 	paint.getTextBounds(text, 0, text.length(), bounds);
+
+>获取屏幕内容高度
+
+		@Override
+	    public void onWindowFocusChanged(boolean hasFocus) {
+	        super.onWindowFocusChanged(hasFocus);
+	        Rect rect = new Rect();
+	        getWindow().findViewById(Window.ID_ANDROID_CONTENT).getDrawingRect(rect);
+	        int toolbarHeight = getResources().getDimensionPixelSize(R.dimen.toolbar);
+	        L.ii("view height:" + rect.height() + ",toolbar:" + toolbarHeight);
+	        ViewGroup.LayoutParams params = bottomLayout.getLayoutParams();
+	        params.height = rect.height() - toolbarHeight;
+	        bottomLayout.setLayoutParams(params);
+	    }
 	
 
 >TextView添加圆形背景span
@@ -77,6 +91,105 @@ LICEcap+GIF Movice Gear
 	        canvas.drawText(text, x / 2, bounds.height() + y / 2, paint);
 	        return bmp;
 	    }
+
+>FragmentPagerAdapter更新问题
+
+>notity-getItemPos-return NONE-instanceItem-(有缓存set数据)-(无缓存new fragment)
+
+	public class DevicePagerAdapter extends FragmentPagerAdapter {
+	    private List<DeviceInfo> data;
+	    private Context context;
+	
+	
+	    public DevicePagerAdapter(FragmentManager fm, Context context, List<DeviceInfo> list) {
+	        super(fm);
+	        this.context = context;
+	        this.data = list;
+	    }
+	
+	    public void update(List<DeviceInfo> list) {
+	        data.clear();
+	        data.addAll(list);
+	        this.notifyDataSetChanged();
+	    }
+	
+	    public List<DeviceInfo> getAll() {
+	        return this.data;
+	    }
+	
+	    public DeviceInfo getItemData(int pos) {
+	        return data.get(pos);
+	    }
+	
+	    @Override
+	    public Fragment getItem(int position) {
+	        DeviceTabFragment fragment = new DeviceTabFragment();
+	        fragment.setListener((HomeBaseActivity) context);
+	        return fragment;
+	    }
+	
+	
+	    @Override
+	    public Object instantiateItem(ViewGroup container, int position) {
+	        DeviceTabFragment f = (DeviceTabFragment) super.instantiateItem(container, position);
+	        f.setInfo(data.get(position));
+	        return f;
+	    }
+	
+	    @Override
+	    public int getCount() {
+	        return data.size();
+	    }
+	
+	    @Override
+	    public int getItemPosition(Object object) {
+	        return POSITION_NONE;
+	    }
+	
+	    public View getTabView(int position) {
+	        DeviceInfo deviceInfo = data.get(position);
+	        View view = LayoutInflater.from(context).inflate(R.layout.common_tab_header, null);
+	        ImageView icon = (ImageView) view.findViewById(R.id.header_icon);
+	        TextView title = (TextView) view.findViewById(R.id.header_title);
+	        icon.setImageResource(deviceInfo.getSelectorDrawable());
+	        title.setText(deviceInfo.getShortName());
+	        return view;
+	    }
+	}
+
+
+>TabLayout
+
+1.修改拦截tab点击事件
+
+	  onTabClickListener = new View.OnClickListener() {
+	            @Override
+	            public void onClick(View v) {
+	                int pos = (int) v.getTag();
+	                TabLayout.Tab tab = tabLayout.getTabAt(pos);
+	                if (tab != null) {
+	                    tab.select();
+	                    DeviceInfo info = data.get(pos);
+	                    moveCenter(info.getUid());
+	                }
+	            }
+	        };
+
+
+	 		tabLayout.setupWithViewPager(viewPager);
+	        for (int i = 0; i < tabLayout.getTabCount(); i++) {
+	            TabLayout.Tab tab = tabLayout.getTabAt(i);
+	            tab.setCustomView(adapter.getTabView(i));
+	            View tabView = (View) tab.getCustomView().getParent();
+	            tabView.setTag(i);
+	            tabView.setOnClickListener(onTabClickListener);
+	        }
+	        if (!isDataNull) {
+	            tabLayout.getTabAt(lastSelectedPos).getCustomView().setSelected(true);
+	            viewPager.setCurrentItem(lastSelectedPos);
+	            loadAddress(list.get(0));
+	        }
+
 
 >日常项目配置 
 
