--- a/低版本实现共享元素动画.md
+++ b/低版本实现共享元素动画.md
@@ -1,5 +1,5 @@
 
->译文的GitHub地址：[低版本实现共享元素动画](https://github.com/thinkSky1206/android-blog/blob/master/Android%20Studio%E8%87%AA%E5%AE%9A%E4%B9%89%E6%96%87%E4%BB%B6%E6%A8%A1%E6%9D%BF.md)
+>译文的GitHub地址：[低版本实现共享元素动画](https://github.com/thinkSky1206/android-blog/blob/master/%E4%BD%8E%E7%89%88%E6%9C%AC%E5%AE%9E%E7%8E%B0%E5%85%B1%E4%BA%AB%E5%85%83%E7%B4%A0%E5%8A%A8%E7%94%BB.md)
 
 
 
