--- a/低版本实现共享元素动画.md
+++ b/低版本实现共享元素动画.md
@@ -209,3 +209,5 @@ Activity B背景设成透明
 
 [Android Shared-Element Transitions for all](https://medium.com/@aitorvs/android-shared-element-transitions-for-all-b90e9361507d#.sk2z0p1hh)
 
+[Android — Smooth shared transitions in all android versions](https://medium.com/@Sserra90/android-smooth-shared-transitions-in-all-android-versions-9cd27fd3c80f#.28my4o4qk)
+
