--- a/低版本实现共享元素动画（二）：格瓦拉动画.md
+++ b/低版本实现共享元素动画（二）：格瓦拉动画.md
@@ -1,13 +1,15 @@
 
->译文的GitHub地址：[低版本实现共享元素动画](https://github.com/thinkSky1206/android-blog/blob/master/Android%20Studio%E8%87%AA%E5%AE%9A%E4%B9%89%E6%96%87%E4%BB%B6%E6%A8%A1%E6%9D%BF.md)
+>译文的GitHub地址：[低版本实现共享元素动画（二）：格瓦拉动画](https://github.com/thinkSky1206/android-blog/blob/master/%E4%BD%8E%E7%89%88%E6%9C%AC%E5%AE%9E%E7%8E%B0%E5%85%B1%E4%BA%AB%E5%85%83%E7%B4%A0%E5%8A%A8%E7%94%BB%EF%BC%88%E4%BA%8C%EF%BC%89%EF%BC%9A%E6%A0%BC%E7%93%A6%E6%8B%89%E5%8A%A8%E7%94%BB.md)
+
+>译者注：好久没折腾动画了，一开始就停不下来了  
 
 
 
 ![Share ElementTransition](https://github.com/thinkSky1206/android-blog/blob/master/images/share_gwl.gif)
 
-刚写完[低版本实现共享元素动画](http://www.jianshu.com/p/b0c1aec41900),ios的同事丢过来手机告诉我格瓦拉app的一个动画很好看，我一看还真不错，就问android版本的实现呢，打开他的香槟金小米5以为是和ios一样的实现，可惜 只实现了一半，盯得动画看了好久，发现都是android material官方指南里面有的动画，然后他又给我看了好几个app的动画，一看我就发现了，ios好多app动画都是android material设计里面，而且不少是material的错误示范，哈哈 
+刚写完[低版本实现共享元素动画](http://www.jianshu.com/p/b0c1aec41900)，ios的同事丢过来手机告诉我格瓦拉app的一个动画很好看，我一看还真不错，就问android版本的实现呢，打开他的香槟金小米5以为是和ios一样的实现，可惜只实现了一半，盯得动画看了一会，发现有点像是android material设计动画，然后他又给我看了好几个app的动画，一看我就发现了，ios好多app动画都是android material设计里面的，而且不少是material的错误示范，哈哈 
 
-像格瓦拉app这个动画，看过google的material设计，会很熟悉，但是这个动画 用户等待内容的时间太长了，体验并不是那么的好。先不讨论对不对了，我们来简单实现一下吧
+像格瓦拉app这个动画，看过google的material设计，会很熟悉，但是这个动画 用户等待内容的时间太长了，体验并不是那么的好，google不推荐。先不讨论对不对了，我们来简单实现一下吧
 
 
 #主要步骤
